<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/dp_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/coin_record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/app_home_text"
            android:text="@string/Loading"/>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_999999"
                android:text="@string/transaction_edit_number"/>

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_999999"
                android:text="@string/assets_recirds_item_type_text"/>

            <TextView
                android:layout_weight="1"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_999999"
                android:text="@string/tv_time"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/coin_record_numb"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/app_home_text"
                android:text="@string/Loading"/>

            <TextView
                android:id="@+id/coin_record_type"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/app_home_text"
                android:text="@string/Loading"/>

            <TextView
                android:id="@+id/coin_record_time"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/app_home_text"
                android:text="@string/Loading"/>

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_alignParentBottom="true"
        android:background="@color/line_color" />


</LinearLayout>
